side margin issue and navbar collaps margin

--- a/css/treehome1.css
+++ b/css/treehome1.css
@@ -27,6 +27,9 @@ a.navbar{
 	padding-top: 10px;
 	background-color: white;
 }
+.navbar-collapse, .navbar-default {
+	border-color: white;
+}
 .navbar .collapse a:after {
 	content: '';
 	position: absolute;
@@ -66,7 +69,10 @@ a.navbar{
 	padding-bottom: 10.4%;
 	line-height: 20px;
 }
-
+.head1 .row {
+	margin-right: 0;
+	margin-left: 0;
+}
 .head1 .f1 {
 	padding-right: 18%;
 	padding-left: 18%;
@@ -178,8 +184,11 @@ a.navbar{
 	width: 30px;
 }
 #ipadair {
-	padding-right: 0;
-	padding-left: 0;
+	padding: 0;
+}
+#ipadair .img-responsive {
+	width: 100%;
+	margin-right: 0;
 }
 .head4 .x {
 	border: 2px solid black;
@@ -492,6 +501,10 @@ a.navbar{
 	padding: 0;
 	padding-top: 1%;
 }
+.head10 .row {
+	margin-right: 0;
+	margin-left: 0;
+}
 .head10 .fa {
 	font-size: 25px;
 	background-color: #222222;
@@ -624,6 +637,10 @@ a.navbar{
 	padding-right: 10%;
 	margin-bottom: 120px;
 }
+.row {
+	margin-right: 0;
+	margin-left: 0;
+}
 @keyframes rotate {
     0% {transform:rotate(0deg);    -moz-transform: rotate(0deg);
     -webkit-transform: rotate(0deg);
@@ -651,9 +668,12 @@ a.navbar{
         display: block;
     }
     .navbar-collapse {
-        border-top: 1px solid transparent;
+        border-top: 0;
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
     }
+    .navbar-collapse, .navbar-default {
+		border-color: white;
+	}
     .navbar-fixed-top {
         top: 0;
         border-width: 0 0 1px;
@@ -702,9 +722,12 @@ a.navbar{
 .navbar {
 	border-radius: 0;
 	border: 0;
-	margin: 30px;
+	margin: 10px;
 	margin-left: 30px;
 	margin-right: 30px;
+}
+.navbar-collapse, .navbar-default {
+	border-top: 0;
 }
 .flex-container_row {
 	flex-wrap: wrap;
